--- a/HDTPharmacy/src/main/resources/templates/category/index.html
+++ b/HDTPharmacy/src/main/resources/templates/category/index.html
@@ -5,6 +5,8 @@
 <head>
 <meta charset="ISO-8859-1">
 <title layout:fragment="title">Quản lý phân loại</title>
+
+<!-- Page style -->
 <th:block layout:fragment="pageStyle">
 	<link
 		th:href="@{/admin/vendors/datatables/dataTables.bootstrap.min.css}"
@@ -12,7 +14,10 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet"
 		href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+	<!-- page css -->
+	<link th:href="@{/admin/vendors/select2/select2.css}" rel="stylesheet">
 </th:block>
+
 </head>
 <body>
 
@@ -32,14 +37,25 @@
 
 			<div class="card-body">
 				<div class="row m-b-30">
-					<div class="col-lg-8"></div>
-					<div class="col-lg-4 text-right">
+
+					<div class="col-lg-4">
+						<form th:action="@{/manage/category}">
+							<div class="input-affix">
+								<i class="prefix-icon anticon anticon-search"></i> <input
+									type="search" name="key" th:value="${key}" onchange="this.form.submit()" class="form-control" placeholder="Tìm kiếm">
+									<input type="search" name="page" hidden class="form-control"  th:value="${currentPage}">
+							</div>
+						</form>
+					</div>
+
+					<div class="col-lg-8 text-right">
 						<button type="button" class="btn btn-primary" data-toggle="modal"
 							data-target="#createCategoryModal">
 							<i class="anticon anticon-plus-circle m-r-5"></i> <span>Tạo
 								phân loại</span>
 						</button>
 					</div>
+
 				</div>
 
 				<div class="m-t-25">
@@ -53,15 +69,15 @@
 						</thead>
 						<tbody>
 							<tr th:each="item : ${categoryList}">
-								<td>[[${item.name}]]</td>
+								<td><img th:if="${item.image!=null}" width="100"
+									th:src="@{${item.getPhotoPath()}}" />&nbsp;&nbsp;
+									[[${item.name}]]</td>
 								<td>[[${item.getParentName}]]</td>
 								<td class=""><a
 									class="btn btn-icon btn-hover btn-sm btn-rounded pull-right edit">
 										<i class="anticon anticon-edit"></i>
-								</a> <a 
-								th:attr="data-label=${item.name}" 
-								th:value="${item.id}" data-toggle="modal"
-									data-target="#confirm-delete"
+								</a> <a th:attr="data-label=${item.name}" th:value="${item.id}"
+									data-toggle="modal" data-target="#confirm-delete"
 									class="btn btn-icon btn-hover btn-sm btn-rounded"> <i
 										class="anticon anticon-delete"></i>
 								</a> <input id="id" th:value="${item.id}" hidden /></td>
@@ -93,7 +109,7 @@
 					</div>
 					<div class="modal-body">
 						<form id="createCategory" th:method="post"
-							th:action="@{/manage/category}">
+							enctype="multipart/form-data" th:action="@{/manage/category}">
 							<input hidden name="currentPage" th:value="${currentPage}" />
 							<div class="form-group">
 								<label class="font-weight-semibold" for="categoryName">Tên
@@ -101,22 +117,29 @@
 									id="categoryName" placeholder="Phân loại">
 							</div>
 							<div class="form-group">
+								<label class="font-weight-semibold" for="categoryName">Hình
+									đại diện:</label> <img th:src="@{/admin/images/others/adobe-thumb.png}"
+									width="150" id="previewCreate" class="img-thumbnail"> <input
+									type="file" hidden accept="image/*" id="createImg"
+									name="categoryImage" />
+							</div>
+
+							<div class="form-group">
 								<label class="font-weight-semibold" for="productCategory">Phân
-									loại cha:</label> <select class="selectpicker" data-live-search="true"
-									id="parentCategory" name="parentCategory">
-									<option value="">Chọn phân loại cha</option>
+									loại cha:</label> <select class="filter-select" id="parentCategory"
+									name="parentCategory">
+									<option value="">-- Chọn phân loại cha --</option>
 									<th:block th:each="cat : ${parents}">
 										<option th:value="${cat.id}">[[${cat.name}]]</option>
 									</th:block>
-									
+
 								</select>
 
 							</div>
 
 							<div class="form-group">
 								<label class="font-weight-semibold" for="productCategory">Level:</label>
-								<select class="custom-select" id="productCategory"
-									name="level">
+								<select class="custom-select" id="productCategory" name="level">
 									<option
 										th:each="level : ${T(com.cp2196g03gr01.common.CategoryLevelEnum).values()}"
 										th:value="${level}">[[${level.getValue()}]]</option>
@@ -148,7 +171,8 @@
 					</div>
 					<div class="modal-body">
 						<form id="updateCategory" th:method="POST"
-							th:action="@{/manage/category}">
+							enctype="multipart/form-data"
+							th:action="@{/manage/category/update}">
 							<input type='hidden' name="id" id="id" /> <input hidden
 								name="currentPage" th:value="${currentPage}" />
 							<div class="form-group">
@@ -157,10 +181,18 @@
 									id="categoryName" name="name" placeholder="Phân loại">
 							</div>
 							<div class="form-group">
+								<label class="font-weight-semibold" for="categoryName">Hình
+									đại diện:</label> <img th:src="@{/admin/images/others/adobe-thumb.png}"
+									width="150" id="previewUpdate" class="img-thumbnail"> <input
+									type="file" hidden accept="image/*" id="updateImg"
+									name="categoryImage" /> <input hidden id="oldImage"
+									name="image" />
+							</div>
+							<div class="form-group">
 								<label class="font-weight-semibold" for="parent">Phân
-									loại cha:</label> <select class="custom-select" name="parentCategory"
+									loại cha:</label> <select class="filter-select" name="parentCategory"
 									id="parent">
-
+									<option value="">-- Chọn phân loại cha --</option>
 									<th:block th:each="cat : ${parents}">
 										<option th:value="${cat.id}">[[${cat.name}]]</option>
 									</th:block>
@@ -196,7 +228,7 @@
 			role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
-					<div class="modal-header" id="confirm-header">Xác nhận xóa </div>
+					<div class="modal-header" id="confirm-header">Xác nhận xóa</div>
 
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
@@ -208,6 +240,7 @@
 
 	</div>
 
+	<!-- Page script -->
 	<th:block layout:fragment="pageScript">
 		<script th:src="@{/admin/vendors/datatables/jquery.dataTables.min.js}"></script>
 
@@ -218,14 +251,18 @@
 			th:src="@{/admin/vendors/jquery-validation/jquery.validate.min.js}"></script>
 
 
+		<!-- page js -->
+		<script th:src="@{/admin/vendors/select2/select2.min.js}"></script>
+
 		<!-- Latest compiled and minified JavaScript -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
 		<script>
+			$('.filter-select').select2();
 			//Create form validation
 			$("#createCategory").validate({
-				ignore : ':hidden:not(:checkbox)',
+				ignore : ':hidden:not(:checkbox), .ignore',
 				errorElement : 'label',
 				errorClass : 'is-invalid',
 				validClass : 'is-valid',
@@ -253,31 +290,65 @@
 								$("#updateCategoryModal #id").val(data.id);
 								$("#updateCategoryModal #categoryName").val(
 										data.name);
-								$("#updateCategoryModal #parent").val(
-										data.parentCategory.id).change();
+								if (data.parentCategory != null) {
+									$("#updateCategoryModal #parent").val(
+											data.parentCategory.id).change();
+								}
+								if(data.image!=null){
+									$("#updateCategoryModal #previewUpdate")
+									.attr('src','[[@{/category-images/}]]'+data.image);
+									$("#updateCategoryModal #oldImage").val(data.image);
+								}else{
+									$("#updateCategoryModal #previewUpdate")
+									.attr('src','[[@{/admin/images/others/adobe-thumb.png}]]');
+								}
+
 								$("#updateCategoryModal #level")
 										.val(data.level).change();
 								$("#updateCategoryModal").modal('show');
 							}
 						});
 					});
-			//Parent select list filter
-			/* $('.parent-filter').on('keyup',()=>{
-				var keyword = $(this).val();
-			    var select = $('#parentCategory').val();
-			    console.log(select);
-			    
-			}); */
+			
 			/* Delete confirmation script */
 			$('#confirm-delete').on(
 					'show.bs.modal',
 					function(e) {
-						$(this).find('#confirm-header').text("Xác nhận xóa \""+ $(e.relatedTarget).data('label')+"\"");
+						$(this).find('#confirm-header').text(
+								"Xác nhận xóa \""
+										+ $(e.relatedTarget).data('label')
+										+ "\"");
 						$(this).find('.btn-ok').attr(
 								'href',
 								'/manage/category/delete/'
-										+ $(e.relatedTarget).attr('value'));
+										+ $(e.relatedTarget).attr('value')
+										+ "?page=[[${currentPage}]]");
 					});
+			
+			/* Image Input for create*/
+			$('#previewCreate').on('click',()=>{
+				$('#createImg').trigger('click');
+			})
+		
+			$('#createImg').on('change',function(){	
+				
+				const [file]=document.getElementById("createImg").files;
+				if(file){
+					$('#previewCreate').attr('src',URL.createObjectURL(file));
+				}				
+			})
+			/* Image Input for update*/
+			$('#previewUpdate').on('click',()=>{
+				$('#updateImg').trigger('click');
+			})
+		
+			$('#updateImg').on('change',function(){	
+				
+				const [file]=document.getElementById("updateImg").files;
+				if(file){
+					$('#previewUpdate').attr('src',URL.createObjectURL(file));
+				}				
+			})
 		</script>
 	</th:block>
 </body>
