--- a/HDTPharmacy/src/main/resources/templates/layouts/adminLayout.html
+++ b/HDTPharmacy/src/main/resources/templates/layouts/adminLayout.html
@@ -208,9 +208,10 @@
 							</span>
 						</a>
 							<ul class="dropdown-menu">
-								<li class="active"><a th:href="@{/manage/category}">Phân loại</a></li>
+								<li class="active"><a th:href="@{/manage/category}">Phân
+										loại</a></li>
 								<li><a th:href="@{/manage/product}">Sản phẩm</a></li>
-								
+
 							</ul></li>
 						<li class="nav-item dropdown"><a class="dropdown-toggle"
 							href="javascript:void(0);"> <span class="icon-holder">
@@ -223,119 +224,10 @@
 								<li><a href="app-chat.html">Khách hàng</a></li>
 								<li><a href="app-file-manager.html">Nhà cung cấp</a></li>
 								<li><a href="app-mail.html">Nhân viên</a></li>
-								
-								
+
+
 							</ul></li>
-						<li class="nav-item dropdown"><a class="dropdown-toggle"
-							href="javascript:void(0);"> <span class="icon-holder">
-									<i class="anticon anticon-build"></i>
-							</span> <span class="title">UI Elements</span> <span class="arrow">
-									<i class="arrow-icon"></i>
-							</span>
-						</a>
-							<ul class="dropdown-menu">
-								<li><a href="avatar.html">Avatar</a></li>
-								<li><a href="alert.html">Alert</a></li>
-								<li><a href="badge.html">Badge</a></li>
-								<li><a href="buttons.html">Buttons</a></li>
-								<li><a href="cards.html">Cards</a></li>
-								<li><a href="icons.html">Icons</a></li>
-								<li><a href="lists.html">Lists</a></li>
-								<li><a href="typography.html">Typography</a></li>
-							</ul></li>
-						<li class="nav-item dropdown"><a class="dropdown-toggle"
-							href="javascript:void(0);"> <span class="icon-holder">
-									<i class="anticon anticon-hdd"></i>
-							</span> <span class="title">Components</span> <span class="arrow">
-									<i class="arrow-icon"></i>
-							</span>
-						</a>
-							<ul class="dropdown-menu">
-								<li><a href="accordion.html">Accordion</a></li>
-								<li><a href="carousel.html">Carousel</a></li>
-								<li><a href="dropdown.html">Dropdown</a></li>
-								<li><a href="modals.html">Modals</a></li>
-								<li><a href="toasts.html">Toasts</a></li>
-								<li><a href="popover.html">Popover</a></li>
-								<li><a href="slider-progress.html">Slider & Progress</a></li>
-								<li><a href="tabs.html">Tabs</a></li>
-								<li><a href="tooltips.html">Tooltips</a></li>
-							</ul></li>
-						<li class="nav-item dropdown"><a class="dropdown-toggle"
-							href="javascript:void(0);"> <span class="icon-holder">
-									<i class="anticon anticon-form"></i>
-							</span> <span class="title">Forms</span> <span class="arrow"> <i
-									class="arrow-icon"></i>
-							</span>
-						</a>
-							<ul class="dropdown-menu">
-								<li><a href="form-elements.html">Form Elements</a></li>
-								<li><a href="form-layouts.html">Form Layouts</a></li>
-								<li><a href="form-validation.html">Form Validation</a></li>
-							</ul></li>
-						<li class="nav-item dropdown"><a class="dropdown-toggle"
-							href="javascript:void(0);"> <span class="icon-holder">
-									<i class="anticon anticon-table"></i>
-							</span> <span class="title">Tables</span> <span class="arrow"> <i
-									class="arrow-icon"></i>
-							</span>
-						</a>
-							<ul class="dropdown-menu">
-								<li><a href="basic-table.html">Basic Table</a></li>
-								<li><a href="data-table.html">Data Table</a></li>
-							</ul></li>
-						<li class="nav-item dropdown"><a class="dropdown-toggle"
-							href="javascript:void(0);"> <span class="icon-holder">
-									<i class="anticon anticon-pie-chart"></i>
-							</span> <span class="title">Charts</span> <span class="arrow"> <i
-									class="arrow-icon"></i>
-							</span>
-						</a>
-							<ul class="dropdown-menu">
-								<li><a href="chartist.html">Chartist</a></li>
-								<li><a href="chartjs.html">ChartJs</a></li>
-							</ul></li>
-						<li class="nav-item dropdown"><a class="dropdown-toggle"
-							href="javascript:void(0);"> <span class="icon-holder">
-									<i class="anticon anticon-file"></i>
-							</span> <span class="title">Pages</span> <span class="arrow"> <i
-									class="arrow-icon"></i>
-							</span>
-						</a>
-							<ul class="dropdown-menu">
-								<li><a href="profile.html">Profile</a></li>
-								<li><a href="invoice.html">Invoice</a></li>
-								<li><a href="members.html">Members</a></li>
-								<li><a href="pricing.html">Pricing</a></li>
-								<li><a href="setting.html">Setting</a></li>
-								<li class="nav-item dropdown"><a href="javascript:void(0);">
-										<span>Blog</span> <span class="arrow"> <i
-											class="arrow-icon"></i>
-									</span>
-								</a>
-									<ul class="dropdown-menu">
-										<li><a href="blog-grid.html">Blog Grid</a></li>
-										<li><a href="blog-list.html">Blog List</a></li>
-										<li><a href="blog-post.html">Blog Post</a></li>
-									</ul></li>
-							</ul></li>
-						<li class="nav-item dropdown"><a class="dropdown-toggle"
-							href="javascript:void(0);"> <span class="icon-holder">
-									<i class="anticon anticon-lock"></i>
-							</span> <span class="title">Authentication</span> <span class="arrow">
-									<i class="arrow-icon"></i>
-							</span>
-						</a>
-							<ul class="dropdown-menu">
-								<li><a href="login-1.html">Login 1</a></li>
-								<li><a href="login-2.html">Login 2</a></li>
-								<li><a href="login-3.html">Login 3</a></li>
-								<li><a href="sign-up-1.html">Sign Up 1</a></li>
-								<li><a href="sign-up-2.html">Sign Up 2</a></li>
-								<li><a href="sign-up-3.html">Sign Up 3</a></li>
-								<li><a href="error-1.html">Error 1</a></li>
-								<li><a href="error-2.html">Error 2</a></li>
-							</ul></li>
+
 					</ul>
 				</div>
 			</div>
@@ -343,8 +235,6 @@
 
 			<!-- Page Container START -->
 			<div class="page-container">
-
-
 				<!-- Content Wrapper START -->
 				<div layout:fragment="content" class="main-content">content
 					goes here</div>
@@ -353,15 +243,12 @@
 				<!-- Footer START -->
 				<footer class="footer">
 					<div class="footer-content">
-						<p class="m-b-0">Copyright © 2019 Theme_Nate. All rights
+						<p class="m-b-0">Copyright © 2022 HDTPharmacy. All rights
 							reserved.</p>
-						<span> <a href="" class="text-gray m-r-15">Term &amp;
-								Conditions</a> <a href="" class="text-gray">Privacy &amp; Policy</a>
-						</span>
+
 					</div>
 				</footer>
 				<!-- Footer END -->
-
 			</div>
 			<!-- Page Container END -->
 
@@ -557,6 +444,22 @@
 
 	<!-- Core JS -->
 	<script th:src="@{/admin/js/app.min.js}"></script>
+
+	<!-- Chat Tawk -->
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function() {
+			var s1 = document.createElement("script"), s0 = document
+					.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/63524a99b0d6371309cab2e3/1gfsn6qbt';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
 
 </body>
 
