added product management

--- a/HDTPharmacy/src/main/resources/templates/layouts/adminLayout.html
+++ b/HDTPharmacy/src/main/resources/templates/layouts/adminLayout.html
@@ -222,7 +222,7 @@
 						</a>
 							<ul class="dropdown-menu">
 								<li><a href="app-chat.html">Khách hàng</a></li>
-								<li><a href="app-file-manager.html">Nhà cung cấp</a></li>
+								<li><a th:href="@{/manage/supplier}">Nhà cung cấp</a></li>
 								<li><a href="app-mail.html">Nhân viên</a></li>
 
 
