--- a/HDTPharmacy/src/main/resources/static/admin/css/custom.css
+++ b/HDTPharmacy/src/main/resources/static/admin/css/custom.css
@@ -12,3 +12,38 @@
 .img-thumbnail:hover{
 	cursor: pointer;
 }
+
+.input-image-orthers{
+	margin-top: 1rem;
+	display: flex;
+	
+}
+
+.input-image-orthers .input-image{
+	margin: 0 0.5rem;
+}
+
+/* Product management modal */
+/*
+ *  STYLE 2
+ */
+
+.custom-scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.custom-scrollbar::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #D62929;
+}
