--- a/HDTPharmacy/src/main/resources/templates/layouts/adminLayout.html
+++ b/HDTPharmacy/src/main/resources/templates/layouts/adminLayout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
 <meta charset="utf-8">
@@ -10,7 +11,8 @@
 <title layout:fragment="title">Enlink - Admin Dashboard Template</title>
 
 <!-- Favicon -->
-<link rel="shortcut icon" th:href="@{/admin/images/logo/favicon.png}">
+<link rel="shortcut icon" th:href="@{/icon.ico}">
+
 
 <!-- page css -->
 <th:block layout:fragment="pageStyle"></th:block>
@@ -36,13 +38,13 @@
 				<div class="logo logo-white">
 					<a href="index.html"> <img
 						src="assets/images/logo/logo-white.png" alt="Logo"> <img
-						class="logo-fold" src="assets/images/logo/logo-fold-white.png"
-						alt="Logo">
+						class="logo-fold"
+						th:src="@{/admin/images/logo/logo-fold-white.png}" alt="Logo">
 					</a>
 				</div>
 				<div class="nav-wrap">
 					<ul class="nav-left">
-						<li class="desktop-toggle"><a href="javascript:void(0);">
+						<!-- <li class="desktop-toggle"><a href="javascript:void(0);">
 								<i class="anticon"></i>
 						</a></li>
 						<li class="mobile-toggle"><a href="javascript:void(0);">
@@ -53,14 +55,13 @@
 								<i class="prefix-icon anticon anticon-search"></i> <input
 									type="text" class="form-control" placeholder="Tìm kiếm">
 							</div>
-						</li>
+						</li> -->
 					</ul>
 					<ul class="nav-right">
 						<li class="dropdown dropdown-animated scale-left"><a
 							href="javascript:void(0);" data-toggle="dropdown"> <i
 								class="anticon anticon-bell notification-badge"></i>
-						</a>
-							<div class="dropdown-menu pop-notification">
+						</a> <!-- <div class="dropdown-menu pop-notification">
 								<div
 									class="p-v-15 p-h-25 border-bottom d-flex justify-content-between align-items-center">
 									<p class="text-dark font-weight-semibold m-b-0">
@@ -129,6 +130,7 @@
 									</div>
 								</div>
 							</div></li>
+						 -->
 						<li class="dropdown dropdown-animated scale-left">
 							<div class="pointer" data-toggle="dropdown">
 								<div class="avatar avatar-image  m-h-10 m-r-15">
@@ -142,9 +144,10 @@
 											<img src="assets/images/avatars/thumb-3.jpg" alt="">
 										</div>
 										<div class="m-l-10">
-											<p class="m-b-0 text-dark font-weight-semibold">Marshall
-												Nichols</p>
-											<p class="m-b-0 opacity-07">UI/UX Desinger</p>
+											<p class="m-b-0 text-dark font-weight-semibold"
+												sec:authentication="principal.fullname"></p>
+											<p class="m-b-0 opacity-07"
+												sec:authentication="principal.authorities"></p>
 										</div>
 									</div>
 								</div>
@@ -175,22 +178,20 @@
 										</div>
 										<i class="anticon font-size-10 anticon-right"></i>
 									</div>
-								</a> <a href="javascript:void(0);"
+								</a> <a th:href="@{/logout}"
 									class="dropdown-item d-block p-h-15 p-v-10">
 									<div class="d-flex align-items-center justify-content-between">
 										<div>
 											<i class="anticon opacity-04 font-size-16 anticon-logout"></i>
 											<span class="m-l-10">Logout</span>
+
 										</div>
 										<i class="anticon font-size-10 anticon-right"></i>
 									</div>
 								</a>
 							</div>
 						</li>
-						<li><a href="javascript:void(0);" data-toggle="modal"
-							data-target="#quick-view"> <i
-								class="anticon anticon-appstore"></i>
-						</a></li>
+
 					</ul>
 				</div>
 			</div>
@@ -208,8 +209,7 @@
 							</span>
 						</a>
 							<ul class="dropdown-menu">
-								<li class="active"><a th:href="@{/manage/category}">Phân
-										loại</a></li>
+								<li class=""><a th:href="@{/manage/category}">Phân loại</a></li>
 								<li><a th:href="@{/manage/product}">Sản phẩm</a></li>
 
 							</ul></li>
@@ -221,11 +221,9 @@
 							</span>
 						</a>
 							<ul class="dropdown-menu">
-								<li><a href="app-chat.html">Khách hàng</a></li>
+								<li><a th:href="@{/manage/customer}">Khách hàng</a></li>
 								<li><a th:href="@{/manage/supplier}">Nhà cung cấp</a></li>
-								<li><a href="app-mail.html">Nhân viên</a></li>
-
-
+								<li><a th:href="@{/manage/employee}">Nhân viên</a></li>
 							</ul></li>
 
 					</ul>
@@ -252,186 +250,7 @@
 			</div>
 			<!-- Page Container END -->
 
-			<!-- Search Start-->
-			<div class="modal modal-left fade search" id="search-drawer">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div
-							class="modal-header justify-content-between align-items-center">
-							<h5 class="modal-title">Search</h5>
-							<button type="button" class="close" data-dismiss="modal">
-								<i class="anticon anticon-close"></i>
-							</button>
-						</div>
-						<div class="modal-body scrollable">
-							<div class="input-affix">
-								<i class="prefix-icon anticon anticon-search"></i> <input
-									type="text" class="form-control" placeholder="Search">
-							</div>
-							<div class="m-t-30">
-								<h5 class="m-b-20">Files</h5>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-cyan avatar-icon">
-										<i class="anticon anticon-file-excel"></i>
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">Quater
-											Report.exl</a>
-										<p class="m-b-0 text-muted font-size-13">by Finance</p>
-									</div>
-								</div>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-blue avatar-icon">
-										<i class="anticon anticon-file-word"></i>
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">Documentaion.docx</a>
-										<p class="m-b-0 text-muted font-size-13">by Developers</p>
-									</div>
-								</div>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-purple avatar-icon">
-										<i class="anticon anticon-file-text"></i>
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">Recipe.txt</a>
-										<p class="m-b-0 text-muted font-size-13">by The Chef</p>
-									</div>
-								</div>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-red avatar-icon">
-										<i class="anticon anticon-file-pdf"></i>
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">Project
-											Requirement.pdf</a>
-										<p class="m-b-0 text-muted font-size-13">by Project
-											Manager</p>
-									</div>
-								</div>
-							</div>
-							<div class="m-t-30">
-								<h5 class="m-b-20">Members</h5>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-image">
-										<img src="assets/images/avatars/thumb-1.jpg" alt="">
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">Erin
-											Gonzales</a>
-										<p class="m-b-0 text-muted font-size-13">UI/UX Designer</p>
-									</div>
-								</div>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-image">
-										<img src="assets/images/avatars/thumb-2.jpg" alt="">
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">Darryl Day</a>
-										<p class="m-b-0 text-muted font-size-13">Software Engineer</p>
-									</div>
-								</div>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-image">
-										<img src="assets/images/avatars/thumb-3.jpg" alt="">
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">Marshall
-											Nichols</a>
-										<p class="m-b-0 text-muted font-size-13">Data Analyst</p>
-									</div>
-								</div>
-							</div>
-							<div class="m-t-30">
-								<h5 class="m-b-20">News</h5>
-								<div class="d-flex m-b-30">
-									<div class="avatar avatar-image">
-										<img src="assets/images/others/img-1.jpg" alt="">
-									</div>
-									<div class="m-l-15">
-										<a href="javascript:void(0);"
-											class="text-dark m-b-0 font-weight-semibold">5 Best
-											Handwriting Fonts</a>
-										<p class="m-b-0 text-muted font-size-13">
-											<i class="anticon anticon-clock-circle"></i> <span
-												class="m-l-5">25 Nov 2018</span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Search End-->
 
-			<!-- Quick View START -->
-			<div class="modal modal-right fade quick-view" id="quick-view">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div
-							class="modal-header justify-content-between align-items-center">
-							<h5 class="modal-title">Theme Config</h5>
-						</div>
-						<div class="modal-body scrollable">
-							<div class="m-b-30">
-								<h5 class="m-b-0">Header Color</h5>
-								<p>Config header background color</p>
-								<div class="theme-configurator d-flex m-t-10">
-									<div class="radio">
-										<input id="header-default" name="header-theme" type="radio"
-											checked value="default"> <label for="header-default"></label>
-									</div>
-									<div class="radio">
-										<input id="header-primary" name="header-theme" type="radio"
-											value="primary"> <label for="header-primary"></label>
-									</div>
-									<div class="radio">
-										<input id="header-success" name="header-theme" type="radio"
-											value="success"> <label for="header-success"></label>
-									</div>
-									<div class="radio">
-										<input id="header-secondary" name="header-theme" type="radio"
-											value="secondary"> <label for="header-secondary"></label>
-									</div>
-									<div class="radio">
-										<input id="header-danger" name="header-theme" type="radio"
-											value="danger"> <label for="header-danger"></label>
-									</div>
-								</div>
-							</div>
-							<hr>
-							<div>
-								<h5 class="m-b-0">Side Nav Dark</h5>
-								<p>Change Side Nav to dark</p>
-								<div class="switch d-inline">
-									<input type="checkbox" name="side-nav-theme-toogle"
-										id="side-nav-theme-toogle"> <label
-										for="side-nav-theme-toogle"></label>
-								</div>
-							</div>
-							<hr>
-							<div>
-								<h5 class="m-b-0">Folded Menu</h5>
-								<p>Toggle Folded Menu</p>
-								<div class="switch d-inline">
-									<input type="checkbox" name="side-nav-fold-toogle"
-										id="side-nav-fold-toogle"> <label
-										for="side-nav-fold-toogle"></label>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Quick View END -->
 		</div>
 	</div>
 
@@ -444,6 +263,9 @@
 
 	<!-- Core JS -->
 	<script th:src="@{/admin/js/app.min.js}"></script>
+
+	<!-- Custom JS -->
+	<script th:src="@{/admin/js/custom.js}"></script>
 
 	<!-- Chat Tawk -->
 	<!--Start of Tawk.to Script-->
@@ -458,6 +280,29 @@
 			s1.setAttribute('crossorigin', '*');
 			s0.parentNode.insertBefore(s1, s0);
 		})();
+		/* Active menu */
+		(function() {
+			var url = window.location.pathname, urlRegExp = new RegExp(url
+					.replace(/\/$/, '')
+					+ "$"); // create regexp to match current url pathname and remove trailing slash if present as it could collide with the link in navigation in case trailing slash wasn't present there
+			// now grab every link from the navigation
+			console.log(url);
+			if (url != "/") {
+				$('.dropdown-menu li').each(function() {
+					let link = $(this).find('a')[0].href;
+					// and test its normalized href against the url pathname regexp
+					if (urlRegExp.test(link.replace(/\/$/, ''))) {
+						$(this).addClass('active');
+					}
+				});
+			}
+
+		})()
+
+		/* Prevent form resubmission when page is refreshed */
+		if (window.history.replaceState) {
+			window.history.replaceState(null, null, window.location.href);
+		}
 	</script>
 	<!--End of Tawk.to Script-->
 
